<resources>
    <string name="app_name" translatable="false">Elliot</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="lock_icon">Lock Icon</string>
    <string name="password_icon">Password Icon</string>
    <string name="login_button">Login</string>
    <string name="developers">by iPRISM</string>
    <string name="camera_back_button">Back Button</string>
    <string name="camera_button">Camera Button</string>
    <string name="floating_camera_button">Floating Camera Button</string>
    <string name="food_name_enter">Food Name</string>
    <string name="back_button_history">Back Button</string>
    <string name="food_name">Food: </string>
    <string name="ingredients_history">Ingredients: </string>
    <string name="meal_history">Meal: </string>
    <string name="time_history">Time: </string>
    <string name="date_history">Date: </string>
    <string name="food_details_placeholder">Food Details Placeholder</string>
    <string name="history_title">History</string>
    <string name="no_history_text">No History</string>
    <string name="profile_title">Profile</string>
    <string name="history_button">History</string>
    <string name="profile_button">Profile</string>
    <string name="statistics_button">Statistics</string>
    <string name="language">Language</string>
    <string name="language_picker_hint">Language Picker</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="select_dates">Select Dates</string>
    <string name="proteins">Proteins</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="back_button_statistics">Back Button Statistics</string>
    <string name="profile_image">Profile Image</string>
    <string name="permissions_denied">Permissions not granted by the user!</string>
    <string name="food_prediction_question">Is the food predicted any of the following?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="food_ingredients_confirmation">Confirm Food Ingredients</string>
    <string name="ingredients_confirmation_toast">The choices are stored successfully!</string>
    <string name="meal_entry">Meal Entry</string>
    <string name="enter_food_again">Please enter a food and try again!</string>
    <string name="welcome_message">Welcome\u0020</string>
    <string name="suggestions">Suggestions</string>
    <string name="breakfast_string_start">Start of Breakfast</string>
    <string name="lunch_string_start">Start of Lunch</string>
    <string name="dinner_string_start">Start of Dinner</string>
    <string name="breakfast_string_end">End of Breakfast</string>
    <string name="lunch_string_end">End of Lunch</string>
    <string name="dinner_string_end">End of Dinner</string>
    <string name="fiber">Fiber</string>
    <string name="sodium">Sodium</string>
    <string name="pie_notification">Please record a food first.</string>
    <string name="calendar_statistics">Calendar Statistics</string>
    <string name="calendar_history">Calendar History</string>
    <string name="select_date">Select Date</string>
    <string name="sugar">Sugar</string>
    <string name="not_supported_food">The food is not supported by the app</string>
    <string name="fa_not_installed">SHAPES GEWI app needs to be installed.</string>
    <string name="meal_time_toast">The meal time changed successfully!</string>


    <!-- Recommender Rules -->
    <string name="protein_min_rule_week">You should consume more protein this week.</string>
    <string name="protein_max_rule_week">You should consume less protein this week.</string>
    <string name="fat_min_rule_week">You should consume more fat this week.</string>
    <string name="fat_max_rule_week">You should consume less fat this week.</string>
    <string name="saturated_fat_rule_week">You should consume less saturated fat this week, if you did so.</string>
    <string name="carbs_min_rule_week">You should consume more carbs this week.</string>
    <string name="carbs_max_rule_week">You should consume less carbs this week.</string>
    <string name="sugar_rule_week">You should consume less sugar this week.</string>
    <string name="protein_min_rule_day">You should consume more protein today.</string>
    <string name="protein_max_rule_day">You should consume less protein today.</string>
    <string name="fat_min_rule_day">You should consume more fat today.</string>
    <string name="fat_max_rule_day">You should consume less fat today.</string>
    <string name="saturated_fat_rule_day">You should consume less saturated fat today, if you did so.</string>
    <string name="carbs_min_rule_day">You should consume more carbs today.</string>
    <string name="carbs_max_rule_day">You should consume less carbs today.</string>
    <string name="sugar_rule_day">You should consume less sugar today.</string>
    <string name="sodium_rule">You should consume less sodium today.</string>
    <string name="fiber_rule_day">You should consume more fiber today.</string>
    <string name="future_fat_rule">You should consume less fat next week.</string>
    <string name="future_saturated_fat_rule">You should consume less saturated fat next week, if you did so.</string>
    <string name="future_sugar_rule">You should consume less sugar next week.</string>
    <string name="head_to_home">Head to home</string>
</resources>